# obsidian-agent

./: .cursorignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CODEX_ANALYSIS_SUMMARY.md  Containerfile  README.md  docker-compose.yaml  justfile  package.json  pyproject.toml  setup-agents.sh  test_hint.py  test_modal.py
.agents/: .mcp.json
.agents/commands/: code-improvement-scanner.md  ruthless-code-reviewer.md
.agents/rules/: skill-user.md
.agents/skills/ast-grep/: SKILL.md
.agents/skills/code-research/: SKILL.md
.agents/skills/tmux/: SKILL.md
.agents/skills/use-jujutsu-vcs/: SKILL.md
.devcontainer/: devcontainer.json
.github/agents/: commands
.github/skills/: skills
.husky/: pre-commit  pre-commit.ts
app/: logger.py  main.py  settings.py
app/api/v1/: router.py  workflows.py
app/core/: logger.py  paths.py  settings.py
app/core/resources/: agent_config.yaml
app/engine/: executor.py  outputs.py  registry.py  schema.py
app/engine/backends/: __init__.py  errors.py  factory.py  inprocess.py  protocol.py
app/engine/graphs/: __init__.py  agents.py  research.py
app/engine/nodes/: persist.py  researcher.py  types.py  (+2 more)
app/resources/: agent_config.yaml
docs/: CODEX_MIGRATION_PLAN.md  TAURI_IMPLEMENTATION_ROADMAP.md  setup-agents.md
scripts/: explore_modal.py
tests/: test_gh_client_repo.py  test_imports.py  test_settings.py
tests/api/: test_workflows.py
tests/backends/: test_inprocess_backend.py
tests/nodes/: test_persist.py
tests/sandbox/: test_local_backend.py
tests/services/: test_codesearch_parser.py
(+40 files in other folders)
