[project]
name = "code-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "arize-phoenix>=12.28.1",
    "langgraph>=1.0.5",
    "openai>=2.15.0",
    "polars>=1.33.1",
    "scipy>=1.17.0",
    "pydantic-settings>=2.7.0",
    "langchain-openai>=1.1.7",
    "langchain>=1.2.7",
    "pyyaml>=6.0.3",
    "loguru>=0.7.3",
    "mcp>=1.6.0",
]

[tool.uv]
concurrent-builds = 1
concurrent-downloads = 1
concurrent-installs = 1
compile-bytecode = false
upgrade-package = ["ruff"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

observability = [
    "openinference-instrumentation-langchain>=0.1.58",
    "openinference-instrumentation-mcp>=1.3.3",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"] # Added 'I' for isort
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
